// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions have the expected shape 1`] = `
Object {
  "meta": Object {
    "extractModel": "Comment",
  },
  "payload": Object {
    "data": Object {
      "comment": Object {
        "id": "1",
        "text": "hi",
      },
    },
  },
  "type": "SocketListener/RECEIVE_COMMENT",
}
`;

exports[`actions have the expected shape 2`] = `
Object {
  "meta": Object {
    "bumpUnreadCount": undefined,
    "extractModel": "Message",
  },
  "payload": Object {
    "data": Object {
      "message": Object {
        "id": "1",
        "text": "hi",
      },
    },
  },
  "type": "SocketListener/RECEIVE_MESSAGE",
}
`;

exports[`actions have the expected shape 3`] = `
Object {
  "meta": Object {
    "extractModel": "Notification",
  },
  "payload": Object {
    "data": Object {
      "notification": Object {
        "id": "1",
        "text": "hi",
      },
    },
  },
  "type": "SocketListener/RECEIVE_NOTIFICATION",
}
`;

exports[`actions have the expected shape 4`] = `
Object {
  "meta": Object {
    "extractModel": "Post",
  },
  "payload": Object {
    "data": Object {
      "post": Object {
        "id": "1",
        "title": "hi",
      },
    },
  },
  "type": "SocketListener/RECEIVE_POST",
}
`;

exports[`actions have the expected shape 5`] = `
Object {
  "meta": Object {
    "extractModel": "MessageThread",
  },
  "payload": Object {
    "data": Object {
      "thread": Object {
        "id": "1",
        "messages": Array [
          Object {
            "id": "1",
            "text": "hi",
          },
        ],
      },
    },
  },
  "type": "SocketListener/RECEIVE_THREAD",
}
`;
